# Candidate_Selection_Board

./: .env.example  .gitattributes  .gitignore  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.pull.yml  docker-compose.yml
services/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 0001_initial_schema.py  0002_resume_segment_identity_fields.py  0003_resume_segment_parsed_profile.py  0004_board_meeting_transcript.py  0005_performance_indexes.py  0006_auth_tables.py  0007_audit_session_fields.py
services/backend/app/: __init__.py  bootstrap.py  main.py
services/backend/app/api/: router.py
services/backend/app/audit/: main.py
services/backend/app/core/: config.py  logging.py  security.py
services/backend/app/db/: base.py  session.py
services/backend/app/domain/: enums.py
services/backend/app/export/: main.py
services/backend/app/gateway/: main.py
services/backend/app/models/: __init__.py  auth.py  base.py  case.py  evaluation.py  operations.py  system.py
services/backend/app/parser/: main.py
services/backend/app/schemas/: adjudications.py  admin.py  analysis.py  audit.py  candidates.py  cases.py  common.py  documents.py  rubrics.py  selection.py  status.py  workflow_plan.py
services/backend/app/services/: admin_settings.py  ai_inference.py  audit.py  auth_service.py  council_deliberation.py  evaluation.py  expert_council.py  export_generation.py  malware_scan.py  oidc.py  parser_client.py  position_analysis.py  reconciliation.py  review_workflow.py  selection.py  storage.py  workflow_plan.py
services/backend/tests/: conftest.py  test_health.py  test_security.py  test_workflow.py
services/ocr/: Dockerfile  pyproject.toml
services/ocr/app/: main.py
services/ocr/tests/: test_health.py
(+94 files in other folders)
