[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selection-board-backend"
version = "0.1.0"
description = "Backend services for the AI-assisted selection board platform."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "boto3>=1.35.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openpyxl>=3.1.5",
  "opensearch-py>=2.7.1",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-docx>=1.1.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "pypdf>=5.0.1",
  "passlib[argon2]>=1.7.4",
  "pyotp>=2.9.0",
  "qrcode[pil]>=7.4.2",
  "slowapi>=0.1.9",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

